HTML-CSS-Website/assets/css/main.css
.header {
  height: var(--header-height);
  background-image: linear-gradient(0, #fe6433, #f53e2d);
}
.header__navbar {
  display: flex;
  justify-content: space-between;
}

.header__navbar-list {
  list-style: none;
  padding-left: 0;
}

.header__navbar-item {
  margin: 0 8px;
  position: relative;
}

.header__navbar-item--has-qr:hover .header__qr {
  /* Viết như trên có nghĩa là vế trái được hover thì CSS sẽ ảnh hưởng đến vế phải */
  display: block;
}

.header__navbar-item--has-notify:hover .header__notify {
  display: block;
}

.header__navbar-item,
.header__navbar-item-link {
  display: inline-block;
  font-size: 1.4rem;
  color: var(--white-color);
  text-decoration: none;
  font-weight: 300;
}

.header__navbar-item,
.header__navbar-item-link,
.header__navbar-icon-link {
  display: inline-flex;
  align-items: center;
}

.header__navbar-item:hover,
.header__navbar-item-link:hover,
.header__navbar-icon-link:hover {
  /* cursor là con trỏ chuột, pointer là hình bàn tay */
  cursor: pointer;
  color: rgba(255, 255, 255, 0.7);
}

.header__navbar-item--strong {
  font-weight: 400;
}

.header__navbar-item--separate::after {
  /* Pseudo Elements after thêm vào sau các thẻ có class này một content nào đó */
  content: "";
  display: block;
  position: absolute;
  width: 2px;
  height: 14px;
  background-color: #fb9086;
  right: -9px;
  top: 50%;
  /* transform thuộc tính biến đổi một element */
  /* -50% cua 14px */
  transform: translateY(-50%);
}

.header__navbar-icon-link {
  color: var(--white-color);
  text-decoration: none;
}

.header__navbar-icon {
  font-size: 1.6rem;
  margin: 0 4px;
}
.header__navbar-title--no-pointer {
  cursor: text;
  color: var(--white-color);
}

/* Header QR Code */

.header__qr {
  background-color: var(--white-color);
  width: 186px;
  position: absolute;
  /* 100% so với thẻ li chứa nó */
  top: 118%;
  left: 0;
  padding: 8px;
  border-radius: 2px;
  display: none;
  animation-name: fadeIn;
  animation-timing-function: ease-in;
  animation-duration: 0.3s;
}

.header__qr::before {
  /*Tạo một lớp giả làm cầu nối giữa thẻ cha và thẻ con  */
  content: "";
  position: absolute;
  width: 100%;
  height: 20px;
  display: block;

  left: 0;
  top: -16px;
}

.header__qr-img {
  /* 100% so với thẻ cha là header__qr */
  width: 100%;
}

.header__qr-apps {
  display: flex;
  justify-content: space-between;
}

.header__qr-link:nth-child(1) {
  margin-left: 11px;
}

.header__qr-link:nth-child(2) {
  margin-right: 11px;
}

.header__qr-download-img {
  height: 16px;
}

/* Header notify */
.header__notify {
  position: absolute;
  top: 118%;

  right: 0;
  width: 404px;
  background-color: var(--white-color);
  border: 1px solid #d3d3d3;
  /* Cursor Default: cái gì bấm vào được mới hiện bàn tay còn không sẽ không hiện */
  cursor: default;
  animation: headerNotifyGrowth ease-in 0.25s;

  /* Transform-Origin thuộc tính điều chỉnh tấm của animation */
  transform-origin: calc(100% - 20px) top;
  display: none;
}
.header__notify::before {
  /*Tạo một lớp giả làm cầu nối giữa thẻ cha và thẻ con  */
  content: "";
  position: absolute;
  width: 100%;
  height: 20px;

  left: 0;
  top: -10px;
}

.header__notify::after {
  content: "";
  border-style: solid;
  border-width: 20px 25px;
  border-color: transparent transparent var(--white-color) transparent;
  position: absolute;
  top: -25px;
  right: 0px;
}

@keyframes headerNotifyGrowth {
  from {
    opacity: 0;
    transform: scale(0);
  }
  to {
    opacity: 1;
    transform: scale(1);
  }
}

.header__notify-header {
  height: 40px;
  background-color: var(--white-color);
}

.header__notify-header h3 {
  color: #999;
  margin: 0 0 0 12px;
  font-weight: 400;
  font-size: 1.4rem;
  /* line-height bằng chiều cao của thẻ cha chứa nó thì chữ sẽ căn vào giữa */
  line-height: 40px;
  /* cursor: text; */

  /* User-select: không cho người dùng chọn vào đây */
  user-select: none;
}
.header__notify-list {
  padding-left: 0;
}
.header__notify-item {
  display: flex;
}

.header__notify-item:hover {
  background-color: #f7f7f7;
}

.header__notify-item--viewed {
  background-color: rgba(238, 77, 45, 0.1);
}
.header__notify-link {
  display: flex;
  padding: 12px;
  text-decoration: none;

  width: 100%;
}
.header__notify-img {
  width: 48px;
  /* object-fit: điều chỉnh kích cỡ ảnh phù hợp giống với background-size; */
  object-fit: contain;
}
.header__notify-info {
  margin-left: 12px;
}
.header__notify-name {
  display: block;
  font-size: 1.4rem;
  color: var(--black-color);
  font-weight: 400;
}
.header__notify-description {
  display: block;
  font-size: 1.2rem;
  color: #756f6e;
  line-height: 1.8rem;
  margin-top: 4px;
}

.header__notify-footer {
  /* Dùng text-align: center thì sẽ không dùng được padding do thuộc tính mặc đinh của nó, dùng display: flex ta có thể dùng margin: auto để căn giữa chữ; */
  display: flex;
}

.header__notify-item-btn {
  text-decoration: none;
  color: var(--text-color);
  padding: 8px 36px;
  margin: auto;
  font-size: 1.4rem;
  font-weight: 400;
}

/* Authen modal */
.auth-form {
  width: 500px;
  background-color: var(--white-color);
  border-radius: 5px;

  /* Thuộc tính overflow: khi element con tràn ra ngoài element cha thì hidden có nghĩa là sẽ ẩn phần tràn đó đi */
  overflow: hidden;
}

.auth-form__container {
  padding: 0 32px;
}

.auth-form__header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0 12px;
  margin-top: 10px;
}

.auth-form__heading {
  font-size: 2.2rem;
  font-weight: 400;
  color: var(--text-color);
}

.auth-form__switch-btn {
  font-size: 1.6rem;
  color: var(--primary-color);
  font-weight: 500;
  cursor: pointer;
}

.auth-form__form {
}

.auth-form__input {
  width: 100%;
  height: 40px;
  margin-top: 16px;
  padding: 0 12px;
  font-size: 1.4rem;
  border: 1px solid var(--border-color);
  border-radius: 2px;
  /* Outline không hiện màu khi focus vào input */
  outline: none;
}

.auth-form__input:focus {
  border-color: #888;
}

.auth-form__aside {
  margin-top: 18px;
}

.auth-form__policy-text {
  font-size: 1.4rem;
  line-height: 1.8rem;
  text-align: center;
  padding: 0 12px;
}

.auth-form__text-link {
  text-decoration: none;
  color: var(--primary-color);
}

.auth-form__controls {
  margin-top: 80px;
  display: flex;
  justify-content: flex-end;
}

.auth-form__controls-back {
  margin-right: 8px;
}

.auth-form__socials {
  background-color: #f5f5f5;
  padding: 12px 30px;
  display: flex;
  justify-content: space-between;
  margin-top: 24px;
}

.auth-form__socials-icon {
  font-size: 1.8rem;
}

.auth-form__socials--facebook {
  background-color: #3a5a98;
  color: var(--white-color);
  margin-right: 10px;
}

.auth-form__socials--facebook .auth-form__socials-icon {
  color: var(--white-color);
}

.auth-form__socials-title {
  margin: 0 36px;
}

.auth-form__socials--google {
  background-color: var(--white-color);
  color: #666;
}

.auth-form__help {
  display: flex;
  justify-content: flex-end;
}

.auth-form__help-link {
  text-decoration: none;
  font-size: 1.4rem;
  color: #939393;
}

.auth-form__help-separate {
  display: block;
  border-left: 1px solid var(--border-color);
  height: 22px;
  margin: 0px 16px 0px;
}

.auth-form__help-forgot {
  color: var(--primary-color);
}

/* Header with search */

.header-with-search {
  height: var(--header-with-search-height);
  display: flex;
  align-items: center;
  margin: 0 8px;
}

.header__logo {
  width: 200px;
}

.header__logo-img {
  width: 150px;
}

.header__search {
  background-color: var(--white-color);
  height: 40px;
  flex: 1;
  border-radius: 2px;
  display: flex;
  align-items: center;
}

.header__cart {
  width: 150px;
  text-align: center;
}

.header__cart-icon {
  font-size: 2.4rem;
  color: var(--white-color);
  margin-top: 4px;
}

.header__search-input-wrap {
  flex: 1;
  height: 100%;
  position: relative;
}

.header__search-input {
  width: 100%;
  height: 100%;
  border: none;
  outline: none;
  font-size: 1.4rem;
  color: var(--text-color);
  padding: 0 16px;
  border-radius: 2px;
}

.header__search-select {
  border-left: 1px solid black;
  padding-left: 16px;
  position: relative;
}

.header__search-select:hover {
  cursor: pointer;
}

.header__search-select-label {
  font-size: 1.4rem;
  color: var(--text-color);
}

.header__search-select-icon {
  font-size: 1.4rem;
  color: #4a4a4a;
  margin: 0 16px 0 8px;
  position: relative;
  top: 1px;
}

.header__search-btn {
  background-color: var(--primary-color);
  border: none;
  height: 36px;
  margin-right: 2px;
  border-radius: 3px;
  width: 60px;
  outline: none;
}

.header__search-btn:hover {
  background-color: #fb6445;
  cursor: pointer;
}

.header__search-btn {
  font-size: 1.4rem;
  color: var(--white-color);
}

.header__search-select:hover .header__search-option {
  display: block;
}

.header__search-option {
  position: absolute;
  right: 0;
  top: 125%;
  width: 130px;
  list-style: none;
  box-shadow: 0 1px 2px #e0e0e0;
  padding-left: 0;
  display: none;
  animation: fadeIn ease-in 0.2s;
}

.header__search-option::before {
  position: absolute;
  content: "";
  display: block;
  width: 100%;
  height: 30px;
  /* background-color: red; */
  top: -21px;
}

.header__search-option-item {
  background-color: var(--white-color);
  border-radius: 3px;
  padding: 8px 8px;
  /* text-align: right; */
}

.header__search-option-item:hover {
  background-color: #fafafa;
  cursor: pointer;
}

.header__search-option-item span {
  font-size: 1.4rem;
  color: var(--text-color);
  margin-left: 8px;
}

.header__search-option-item i {
  font-size: 1.2rem;
  color: var(--primary-color);
  margin-left: 12px;
}

.header__search-input:focus ~ .header__search-history {
  display: block;
}

.header__search-history {
  position: absolute;
  top: calc(100% + 2px);
  left: 0;
  width: calc(100% - 16px);
  background-color: var(--white-color);
  border-radius: 3px;
  box-shadow: 0 1px 3px #666;
  display: none;
}

.header__search-history-heading {
  margin: 6px 12px;
  font-size: 1.4rem;
  color: #999;
  font-weight: 400;
}

.header__search-history-list {
  padding-left: 0;
  list-style: none;
  margin: 6px 0 0;
}

.header__search-history-item {
  height: 38px;
  padding: 0px 12px;
}

.header__search-history-item:last-child {
  border-bottom-left-radius: 3px;
  border-bottom-right-radius: 3px;
}

.header__search-history-item:hover {
  background-color: #fafafa;
}

.header__search-history-item a {
  text-decoration: none;
  font-size: 1.4rem;
  color: var(--text-color);
  line-height: 38px;
}

